--- a/pages/index.html
+++ b/pages/index.html
@@ -21,7 +21,6 @@
   </div>
 
   
-
-  <script src="../dist/renderer.js" defer></script>
+  <script src="../dist/front/renderer/renderer.js" defer></script>
   </body>
 </html>
