--- a/pages/index.html
+++ b/pages/index.html
@@ -21,6 +21,6 @@
   </div>
 
   
-  <script src="../dist/front/renderer/renderer.js" defer></script>
+  <script type="module" src="../dist/front/renderer/renderer.js" defer></script>
   </body>
 </html>
