--- a/pages/index.html
+++ b/pages/index.html
@@ -9,6 +9,7 @@
   </head>
 <body>
   <div class="calendar">
+    <button id="add-event-button">Ajouter</button>
     <div class="month">
       <button id="prevMonthBtn"><i class="fa-solid fa-chevron-left"></i></button>
       <p class="currentMontText"></p>
