--- a/pages/event.html
+++ b/pages/event.html
@@ -1,36 +1,108 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Event Details</title>
   <link href="./css/styles.css" rel="stylesheet">
 </head>
 <body>
-  <h1>Event Details</h1>
-  <div id="event-details">
-    <!-- Event details will be dynamically populated here -->
-  </div>
-  <form action="" method="POST" id='edit-form' style="display: none;">
-    <input type="hidden" name="id" value="">
-    Titre :<input type="text" name="titre"> <br><br>
-    <div class="dates">
-      <div>
-        <p>Date de début :</p>
-        <input type="date" name="date_deb">
+  <div class="page-wrapper">
+
+    <!-- Details view -->
+    <div id="event-details-view">
+      <div class="card" id="event-details">
+        <!-- populated by JS -->
       </div>
-      <div>
-        <p>Date de fin :</p>
-        <input type="date" name="date_fin">
+
+      <div class="card-footer" style="border-radius: 0 0 14px 14px; margin-top: -1px; border: 1px solid var(--border); border-top: none; background: var(--surface-2); padding: 14px 24px; display: flex; gap: 10px;">
+        <button id="edit" class="btn btn-secondary">
+          <svg xmlns="http://www.w3.org/2000/svg" width="13" height="13" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
+            <path d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"/>
+            <path d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"/>
+          </svg>
+          Edit
+        </button>
+        <button id="delete" class="btn btn-danger">
+          <svg xmlns="http://www.w3.org/2000/svg" width="13" height="13" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
+            <polyline points="3 6 5 6 21 6"/>
+            <path d="M19 6l-1 14a2 2 0 0 1-2 2H8a2 2 0 0 1-2-2L5 6"/>
+            <path d="M10 11v6"/><path d="M14 11v6"/>
+            <path d="M9 6V4a1 1 0 0 1 1-1h4a1 1 0 0 1 1 1v2"/>
+          </svg>
+          Delete
+        </button>
       </div>
-      
-    </div> <br>
-    <textarea id="description-input" cols="30" rows="10"></textarea> <br>
-    <input type="button" id="save-btn" value="Sauvegarder">
-  </form> <br>
-  <div class="buttons">
-    <button id="edit">Modifier</button>
-    <button id="delete">Supprimer</button>
+    </div>
+
+    <!-- Edit form (hidden by default) -->
+    <div id="edit-form-view" class="hidden">
+      <h2 class="page-title">
+        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+          <path d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"/>
+          <path d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"/>
+        </svg>
+        Edit Event
+      </h2>
+      <div class="card">
+        <div class="card-body">
+          <input type="hidden" id="edit-id">
+
+          <div class="form-group">
+            <label class="form-label" for="edit-titre">Title</label>
+            <input class="form-control" type="text" id="edit-titre" placeholder="Event title">
+          </div>
+
+          <div class="form-row">
+            <div class="form-group">
+              <label class="form-label" for="edit-date-deb">Start Date</label>
+              <input class="form-control" type="date" id="edit-date-deb">
+            </div>
+            <div class="form-group">
+              <label class="form-label" for="edit-date-fin">End Date</label>
+              <input class="form-control" type="date" id="edit-date-fin">
+            </div>
+          </div>
+
+          <div class="form-group">
+            <label class="form-label" for="edit-description">Description</label>
+            <textarea class="form-control" id="edit-description" rows="5" placeholder="Event description..."></textarea>
+          </div>
+        </div>
+        <div class="card-footer">
+          <button id="save-btn" class="btn btn-success">
+            <svg xmlns="http://www.w3.org/2000/svg" width="13" height="13" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
+              <path d="M19 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11l5 5v11a2 2 0 0 1-2 2z"/>
+              <polyline points="17 21 17 13 7 13 7 21"/>
+              <polyline points="7 3 7 8 15 8"/>
+            </svg>
+            Save Changes
+          </button>
+          <button id="cancel-edit" class="btn btn-secondary">Cancel</button>
+        </div>
+      </div>
+    </div>
+
   </div>
+
+  <!-- Confirm delete dialog -->
+  <div class="dialog-overlay hidden" id="delete-dialog">
+    <div class="dialog">
+      <h3>Delete Event</h3>
+      <p>Are you sure you want to delete this event? This action cannot be undone.</p>
+      <div class="dialog-actions">
+        <button id="dialog-cancel" class="btn btn-secondary btn-sm">Cancel</button>
+        <button id="dialog-confirm" class="btn btn-danger btn-sm">Delete</button>
+      </div>
+    </div>
+  </div>
+
+  <div class="toast-container" id="toast-container"></div>
+
+  <style>
+    .hidden { display: none !important; }
+  </style>
+
   <script type="module" src="../dist/front/renderer/eventDetails.js" defer></script>
 </body>
 </html>
