--- a/pages/form.html
+++ b/pages/form.html
@@ -1,26 +1,66 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Ajouter un évènement</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>New Event</title>
   <link href="./css/styles.css" rel="stylesheet">
 </head>
 <body>
-  <form action="" method="POST" id="edit-form">
-	Titre :<input type="text" name="titre"> <br>
-	<div class="dates">
-    <div>
-      <p>Date de début :</p>
-      <input type="date" name="date_deb">
+  <div class="page-wrapper">
+    <h2 class="page-title">
+      <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+        <rect x="3" y="4" width="18" height="18" rx="2" ry="2"/>
+        <line x1="16" y1="2" x2="16" y2="6"/>
+        <line x1="8" y1="2" x2="8" y2="6"/>
+        <line x1="3" y1="10" x2="21" y2="10"/>
+        <line x1="12" y1="14" x2="12" y2="18"/>
+        <line x1="10" y1="16" x2="14" y2="16"/>
+      </svg>
+      New Event
+    </h2>
+
+    <div class="card">
+      <div class="card-body">
+        <form id="event-form" novalidate>
+
+          <div class="form-group">
+            <label class="form-label" for="titre">Title *</label>
+            <input class="form-control" type="text" id="titre" name="titre" placeholder="Event title" required>
+          </div>
+
+          <div class="form-row">
+            <div class="form-group">
+              <label class="form-label" for="date_deb">Start Date *</label>
+              <input class="form-control" type="date" id="date_deb" name="date_deb" required>
+            </div>
+            <div class="form-group">
+              <label class="form-label" for="date_fin">End Date *</label>
+              <input class="form-control" type="date" id="date_fin" name="date_fin" required>
+            </div>
+          </div>
+
+          <div class="form-group">
+            <label class="form-label" for="description-input">Description</label>
+            <textarea class="form-control" id="description-input" name="description" rows="5" placeholder="Event description (optional)..."></textarea>
+          </div>
+
+        </form>
+      </div>
+      <div class="card-footer">
+        <button type="button" id="submit-button" class="btn btn-primary">
+          <svg xmlns="http://www.w3.org/2000/svg" width="13" height="13" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
+            <line x1="12" y1="5" x2="12" y2="19"/>
+            <line x1="5" y1="12" x2="19" y2="12"/>
+          </svg>
+          Create Event
+        </button>
+      </div>
     </div>
-    <div>
-      <p>Date de fin :</p>
-      <input type="date" name="date_fin">
-    </div>
-  </div><br>
-	<textarea id="description-input" cols="30" rows="10"></textarea>
-	<input type="button" id="submit-button" value="Créer">
-  </form>
+  </div>
+
+  <div class="toast-container" id="toast-container"></div>
+
   <script type="module" src="../dist/front/renderer/AddForm.js" defer></script>
 </body>
 </html>
