--- a/pages/index.html
+++ b/pages/index.html
@@ -1,27 +1,63 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Calendar</title>
     <link href="./css/styles.css" rel="stylesheet">
-    <!-- Font Awesome -->
-    <script src="https://kit.fontawesome.com/3b346af46d.js" crossorigin="anonymous"></script>
   </head>
-<body>
-  <div class="calendar">
-    <button id="add-event-button">Ajouter</button>
-    <div class="month">
-      <button id="prevMonthBtn"><i class="fa-solid fa-chevron-left"></i></button>
-      <p class="currentMontText"></p>
-      <button id="nextMonthBtn"><i class="fa-solid fa-chevron-right"></i></button>
-    </div>
-    <div class="weekdays">
-      
-    </div>
-    <div class="days"></div>
-  </div>
+  <body>
+    <header class="app-header">
+      <div class="app-title">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+          <rect x="3" y="4" width="18" height="18" rx="2" ry="2"/>
+          <line x1="16" y1="2" x2="16" y2="6"/>
+          <line x1="8" y1="2" x2="8" y2="6"/>
+          <line x1="3" y1="10" x2="21" y2="10"/>
+        </svg>
+        Calendar
+      </div>
+      <button id="add-event-button" class="btn btn-primary">
+        <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
+          <line x1="12" y1="5" x2="12" y2="19"/>
+          <line x1="5" y1="12" x2="19" y2="12"/>
+        </svg>
+        New Event
+      </button>
+    </header>
 
-  
-  <script type="module" src="../dist/front/renderer/renderer.js" defer></script>
+    <main class="calendar">
+      <div class="calendar-nav">
+        <button id="prevMonthBtn" class="nav-btn" title="Previous month">
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
+            <polyline points="15 18 9 12 15 6"/>
+          </svg>
+        </button>
+        <span class="current-month-text" id="currentMonthText"></span>
+        <button id="nextMonthBtn" class="nav-btn" title="Next month">
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
+            <polyline points="9 18 15 12 9 6"/>
+          </svg>
+        </button>
+      </div>
+
+      <div class="weekdays">
+        <span>Mon</span>
+        <span>Tue</span>
+        <span>Wed</span>
+        <span>Thu</span>
+        <span>Fri</span>
+        <span>Sat</span>
+        <span>Sun</span>
+      </div>
+
+      <div class="days" id="days-grid"></div>
+
+      <p class="dblclick-hint">Double-click a day to quickly add an event</p>
+    </main>
+
+    <div class="toast-container" id="toast-container"></div>
+
+    <script type="module" src="../dist/front/renderer/renderer.js" defer></script>
   </body>
 </html>
