--- a/pages/event.html
+++ b/pages/event.html
@@ -7,6 +7,35 @@
   <link href="./css/styles.css" rel="stylesheet">
 </head>
 <body>
+  <!-- Custom titlebar -->
+  <div class="titlebar">
+    <span class="titlebar-title">Event Details</span>
+    <div class="titlebar-controls">
+      <button class="titlebar-btn minimize" id="tb-minimize" title="Minimize">
+        <svg width="10" height="10" viewBox="0 0 10 10" fill="none">
+          <rect x="0" y="4.5" width="10" height="1.2" rx="0.6" fill="currentColor"/>
+        </svg>
+      </button>
+      <button class="titlebar-btn maximize" id="tb-maximize" title="Maximize">
+        <svg width="10" height="10" viewBox="0 0 10 10" fill="none">
+          <rect x="0.75" y="0.75" width="8.5" height="8.5" rx="1" stroke="currentColor" stroke-width="1.2" fill="none"/>
+        </svg>
+      </button>
+      <button class="titlebar-btn close" id="tb-close" title="Close">
+        <svg width="10" height="10" viewBox="0 0 10 10" fill="none">
+          <line x1="1" y1="1" x2="9" y2="9" stroke="currentColor" stroke-width="1.3" stroke-linecap="round"/>
+          <line x1="9" y1="1" x2="1" y2="9" stroke="currentColor" stroke-width="1.3" stroke-linecap="round"/>
+        </svg>
+      </button>
+    </div>
+  </div>
+  <script>
+    const { ipcRenderer } = require('electron');
+    document.getElementById('tb-close').onclick    = () => ipcRenderer.send('win-close');
+    document.getElementById('tb-minimize').onclick = () => ipcRenderer.send('win-minimize');
+    document.getElementById('tb-maximize').onclick = () => ipcRenderer.send('win-maximize');
+  </script>
+
   <div class="page-wrapper">
 
     <!-- Details view -->
@@ -15,7 +44,7 @@
         <!-- populated by JS -->
       </div>
 
-      <div class="card-footer" style="border-radius: 0 0 14px 14px; margin-top: -1px; border: 1px solid var(--border); border-top: none; background: var(--surface-2); padding: 14px 24px; display: flex; gap: 10px;">
+      <div class="card-footer">
         <button id="edit" class="btn btn-secondary">
           <svg xmlns="http://www.w3.org/2000/svg" width="13" height="13" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
             <path d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"/>
