--- a/pages/form.html
+++ b/pages/form.html
@@ -7,6 +7,35 @@
   <link href="./css/styles.css" rel="stylesheet">
 </head>
 <body>
+  <!-- Custom titlebar -->
+  <div class="titlebar">
+    <span class="titlebar-title">New Event</span>
+    <div class="titlebar-controls">
+      <button class="titlebar-btn minimize" id="tb-minimize" title="Minimize">
+        <svg width="10" height="10" viewBox="0 0 10 10" fill="none">
+          <rect x="0" y="4.5" width="10" height="1.2" rx="0.6" fill="currentColor"/>
+        </svg>
+      </button>
+      <button class="titlebar-btn maximize" id="tb-maximize" title="Maximize">
+        <svg width="10" height="10" viewBox="0 0 10 10" fill="none">
+          <rect x="0.75" y="0.75" width="8.5" height="8.5" rx="1" stroke="currentColor" stroke-width="1.2" fill="none"/>
+        </svg>
+      </button>
+      <button class="titlebar-btn close" id="tb-close" title="Close">
+        <svg width="10" height="10" viewBox="0 0 10 10" fill="none">
+          <line x1="1" y1="1" x2="9" y2="9" stroke="currentColor" stroke-width="1.3" stroke-linecap="round"/>
+          <line x1="9" y1="1" x2="1" y2="9" stroke="currentColor" stroke-width="1.3" stroke-linecap="round"/>
+        </svg>
+      </button>
+    </div>
+  </div>
+  <script>
+    const { ipcRenderer } = require('electron');
+    document.getElementById('tb-close').onclick    = () => ipcRenderer.send('win-close');
+    document.getElementById('tb-minimize').onclick = () => ipcRenderer.send('win-minimize');
+    document.getElementById('tb-maximize').onclick = () => ipcRenderer.send('win-maximize');
+  </script>
+
   <div class="page-wrapper">
     <h2 class="page-title">
       <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
